output/MSF_test/out_files/slurm-37159173_3.out
  File "DupuitLEMTestMSFConvergence.py", line 17
    task_id = os.environ['SLURM_ARRAY_TASK_ID'])
                                               ^
SyntaxError: invalid syntax
